--- a/gk.bib
+++ b/gk.bib
@@ -10307,7 +10307,7 @@ pages={706-719}
 	pages={185-203}
 }
 
-@article{rubin74,
+@article{Rubin74,
 	author={Donald B. Rubin},
 	title={Estimating Causal Effects of Treatments in Randomized and Nonrandomized
 		Studies},
@@ -10318,7 +10318,7 @@ pages={706-719}
 }
 
 @article{Rubin76,
-	author={Donald Rubin},
+	author={Donald B. Rubin},
 	title={Inference and Missing Data},
 	journal={Biometrika},
 	volume={63},
@@ -10327,7 +10327,7 @@ pages={706-719}
 }
 
 @article{Rubin77,
-	author={Donald Rubin},
+	author={Donald B. Rubin},
 	title={Formalizing Subjective Notions about the Effect of Nonrespondents in Sample
 		Surveys},
 	journal={Journal of the American Statistical Association},
@@ -10368,193 +10368,205 @@ pages={706-719}
 }
 
 @book{Rubin87,
-	author={Donald B. Rubin},
-	title={Multiple Imputation for Nonresponse in Surveys},
-	publisher={John Wiley},
-	year={1987},
-	address={New York}
+  author =       {Donald B. Rubin},
+  title =        {Multiple Imputation for Nonresponse in Surveys},
+  publisher =    {John Wiley},
+  year =         {1987},
+  address =      {New York}
 }
 
 @article{Rubin87b,
-	author={Donald Rubin},
-	title={A Noniterative sampling/importance resampling alternative to the data augmentation
-		algorithm for creating a few imputations when fractions of missing information
-		are modest: the SIR Algorithm, Discussion of Tanner and Wong},
-	journal={Journal of the American Statistical Assocaition},
-	volume={82},
-	year={1987},
-	pages={543-546}
+  author =       {Donald B. Rubin},
+  title =        {A Noniterative sampling/importance resampling
+                  alternative to the data augmentation algorithm for
+                  creating a few imputations when fractions of missing
+                  information are modest: the SIR Algorithm,
+                  Discussion of Tanner and Wong},
+  journal =      {Journal of the American Statistical Assocaition},
+  volume =       {82},
+  year =         {1987},
+  pages =        {543-546}
 }
 
 @article{Rubin91,
-	author={Donald B. Rubin},
-	title={Practical implications of modes of statistical inference for causal effects
-		and the critical role of the assignment mechanism},
-	journal={Biometrics},
-	volume= 47,
-	year= 1991,
-	pages={1213-1234}
+  author =       {Donald B. Rubin},
+  title =        {Practical implications of modes of statistical
+                  inference for causal effects and the critical role
+                  of the assignment mechanism},
+  journal =      {Biometrics},
+  volume =       47,
+  year =         1991,
+  pages =        {1213-1234}
 }
 
 @article{Rubin94,
-	author={Donald B. Rubin},
-	title={Missing Data, Imputation, and the Bootstrap: Comment},
-	journal={Journal of the American Statistical Association},
-	volume={89},
-	year={1994},
-	pages={475-478},
-	month={Jun},
-	number={426}
+  author =       {Donald B. Rubin},
+  title =        {Missing Data, Imputation, and the Bootstrap:
+                  Comment},
+  journal =      {Journal of the American Statistical Association},
+  volume =       {89},
+  year =         {1994},
+  pages =        {475-478},
+  month =        {Jun},
+  number =       {426}
 }
 
 @article{Rubin96,
-	author={Donald Rubin},
-	title={Multiple Imputation after 18+ Years},
-	journal={Journal of the American Statistical Association},
-	volume={91},
-	year={1996},
-	pages={473-489}
+  author =       {Donald B. Rubin},
+  title =        {Multiple Imputation after 18+ Years},
+  journal =      {Journal of the American Statistical Association},
+  volume =       {91},
+  year =         {1996},
+  pages =        {473-489}
 }
 
 @article{Rubin97,
-	author={Donald B. Rubin},
-	title={Estimating causal effects from large data sets using propensity scores},
-	journal={Annals of Internal Medicine},
-	volume= 127,
-	year= 1997,
-	pages={757-763}
+  author =       {Donald B. Rubin},
+  title =        {Estimating causal effects from large data sets using
+                  propensity scores},
+  journal =      {Annals of Internal Medicine},
+  volume =       127,
+  year =         1997,
+  pages =        {757-763}
 }
 
 @article{RubSch86,
-	author={Donald Rubin and Nathaniel Schenker},
-	title={Multiple Imputation for Interval Estimation for Simple Random Samples with
-		Ignorable Nonresponse},
-	journal= jasa,
-	volume= 81,
-	year= 1986,
-	pages={366-374},
-	number= 394
+  author =       {Donald B. Rubin and Nathaniel Schenker},
+  title =        {Multiple Imputation for Interval Estimation for
+                  Simple Random Samples with Ignorable Nonresponse},
+  journal =      jasa,
+  volume =       81,
+  year =         1986,
+  pages =        {366-374},
+  number =       394
 }
 
 @article{RubSch87,
-	author={Donald B. Rubin and Nathaniel Schenker},
-	title={Logit-Based Interval Estimation from Binomial Data Using the Jeffreys Prior},
-	journal={Sociological Methodology},
-	volume={17},
-	year={1987},
-	pages={131-144}
+  author =       {Donald B. Rubin and Nathaniel Schenker},
+  title =        {Logit-Based Interval Estimation from Binomial Data
+                  Using the Jeffreys Prior},
+  journal =      {Sociological Methodology},
+  volume =       {17},
+  year =         {1987},
+  pages =        {131-144}
 }
 
 @inproceedings{RubSch90,
-	author={D.B. Rubin and J.L. Schafer},
-	title={Efficiently Creating Multiple Imputations for Incomplete Multivariate Normal
-		Data},
-	booktitle={Proceedings of the Statistical Computing Section of the American Statistical
-		Association},
-	year={1990},
-	pages={83-88}
+  author =       {Donald B. Rubin and J.L. Schafer},
+  title =        {Efficiently Creating Multiple Imputations for
+                  Incomplete Multivariate Normal Data},
+  booktitle =    {Proceedings of the Statistical Computing Section of
+                  the American Statistical Association},
+  year =         {1990},
+  pages =        {83-88}
 }
 
 @article{RubStu06,
-	author={Donald B. Rubin and Elizabeth A. Stuart},
-	title={Affinely invariant matching methods with discriminant mixtures of proportional
-		ellipsoidally symmetric distributions},
-	journal={Annals of Statistics},
-	volume= 34,
-	year={2006},
-	pages={1814-1826},
-	number= 4
+  author =       {Donald B. Rubin and Elizabeth A. Stuart},
+  title =        {Affinely invariant matching methods with
+                  discriminant mixtures of proportional ellipsoidally
+                  symmetric distributions},
+  journal =      {Annals of Statistics},
+  volume =       34,
+  year =         {2006},
+  pages =        {1814-1826},
+  number =       4
 }
 
 @article{RubTho00,
-	author={Donald B. Rubin and Neal Thomas},
-	title={Combining propensity score matching with additional adjustments for prognostic
-		covariates},
-	journal={Journal of the American Statistical Association},
-	volume= 95,
-	year={2000},
-	pages={573-585}
+  author =       {Donald B. Rubin and Neal Thomas},
+  title =        {Combining propensity score matching with additional
+                  adjustments for prognostic covariates},
+  journal =      {Journal of the American Statistical Association},
+  volume =       95,
+  year =         {2000},
+  pages =        {573-585}
 }
 
 @article{RubTh,
-	author={Donald B. Rubin and Neal Thomas},
-	title={Characterizing the Effect of Matching Using Linear Propensity Score Methods
-		With Normal Distributions},
-	journal={Biometrika},
-	volume={79},
-	year={1992},
-	pages={797-809}
+  author =       {Donald B. Rubin and Neal Thomas},
+  title =        {Characterizing the Effect of Matching Using Linear
+                  Propensity Score Methods With Normal Distributions},
+  journal =      {Biometrika},
+  volume =       {79},
+  year =         {1992},
+  pages =        {797-809}
 }
 
 @article{RubTho96,
-	author={Donald B. Rubin and Neal Thomas},
-	title={Matching Using Estimated Propensity Scores, Relating Theory to Practice},
-	journal={Biometrics},
-	volume={52},
-	year={1996},
-	pages={249-264}
+  author =       {Donald B. Rubin and Neal Thomas},
+  title =        {Matching Using Estimated Propensity Scores, Relating
+                  Theory to Practice},
+  journal =      {Biometrics},
+  volume =       {52},
+  year =         {1996},
+  pages =        {249-264}
 }
 
 @unpublished{RugKimMar03,
-  author =	 {Theodore W. Ruger and Pauline T. Kim and Andrew
-                  D. Martin and Kevin M. Quinn},
-  title =	 {The Supreme Court Forecasting Project: Legal and
+  author =       {Theodore W. Ruger and Pauline T. Kim and Andrew D.
+                  Martin and Kevin M. Quinn},
+  title =        {The Supreme Court Forecasting Project: Legal and
                   Political Science Approaches to Predicting Supreme
                   Court Decision-Making},
-  note =	 {Washington University in St. Louis},
-  year =	 2003
+  note =         {Washington University in St. Louis},
+  year =         2003
 }
 
 @book{Rule88,
-	author={Rule, J. B.},
-	title={Theories of Civil Violence},
-	publisher={University of California Press},
-	year= 1988,
-	address={Berkeley}
+  author =       {Rule, J. B.},
+  title =        {Theories of Civil Violence},
+  publisher =    {University of California Press},
+  year =         1988,
+  address =      {Berkeley}
 }
 
 @article{RusOneBer03,
-	author={Bruce Russett and John Oneal and Michael L. Berbaum},
-	title={Causes of Peace: Democracy, Interdependence, and International Organizations,
-		1885--1992},
-	journal= isq,
-	volume= 47,
-	year= 2003,
-	pages={371--393},
-	month={September},
-	number= 3
+  author =       {Bruce Russett and John Oneal and Michael L. Berbaum},
+  title =        {Causes of Peace: Democracy, Interdependence, and
+                  International Organizations, 1885--1992},
+  journal =      isq,
+  volume =       47,
+  year =         2003,
+  pages =        {371--393},
+  month =        {September},
+  number =       3
 }
 
 @article{SabCanGib05,
-	author={Marc S. Sabatine and Christopher P. Cannon and C. Michael Gibson and Jose
-		L. Lopez-Sendon and Gilles Montalescot and Pierre Theroux and Basil S.
-		Lewis and Sabina A. Murphy and Carolyn H. McCabe and Eugene Braunwald},
-	title={Effect of Clopidogrel Pretreatment Before Percutaneous Coronary Intervention
-		in Patients with ST-Elevation Myoc},
-	journal={Journal of the American Medical Association},
-	volume={294},
-	year={2005},
-	pages={1224-1232},
-	month={September},
-	number={10}
+  author =       {Marc S. Sabatine and Christopher P. Cannon and C.
+                  Michael Gibson and Jose L. Lopez-Sendon and Gilles
+                  Montalescot and Pierre Theroux and Basil S. Lewis
+                  and Sabina A. Murphy and Carolyn H. McCabe and
+                  Eugene Braunwald},
+  title =        {Effect of Clopidogrel Pretreatment Before
+                  Percutaneous Coronary Intervention in Patients with
+                  ST-Elevation Myoc},
+  journal =      {Journal of the American Medical Association},
+  volume =       {294},
+  year =         {2005},
+  pages =        {1224-1232},
+  month =        {September},
+  number =       {10}
 }
 
 @article{sackett96,
-	author={D. Sackett, J. Deeks and D. Altman},
-	title={Down with Odds Ratios},
-	journal={Evidence-Based Medicine},
-	volume= 1,
-	year= 1996,
-	pages={164--6},
-	number= 6
+  author =       {D. Sackett, J. Deeks and D. Altman},
+  title =        {Down with Odds Ratios},
+  journal =      {Evidence-Based Medicine},
+  volume =       1,
+  year =         1996,
+  pages =        {164--6},
+  number =       6
 }
 
 @book{Saldern79,
-	author={Adelheid Saldern},
-	title={Mittelstand im `Dritten Reich'. Handwerker-Einzelh{\"a}ndler - Bauern},
-	publisher={Campus},
-	year= 1979,
-	address={Frankfurt}
+  author =       {Adelheid Saldern},
+  title =        {Mittelstand im `Dritten Reich'.
+                  Handwerker-Einzelh{\"a}ndler - Bauern},
+  publisher =    {Campus},
+  year =         1979,
+  address =      {Frankfurt}
 }
 
 @article{SalWeiHam02,
