--- a/gk.bib
+++ b/gk.bib
@@ -159,7 +159,7 @@ howpublished = {NBER}
 
 
 @article{Imb00,
-  author =       {Guido Imbens},
+  author =       {Guido W. Imbens},
   title =        {The role of the propensity score in estimating the
                   dose-response functions},
   year =         {2000},
@@ -14937,12 +14937,12 @@ pages={706-719}
 
 @article{HeiRub91,
   title =	 {{Ignorability and Coarse Data}},
-  author =	 {Heitjan, D.F. and Rubin, D.B.},
+  author =	 {Heitjan, D.F. and Rubin, Donald B.},
   journal =	 {The Annals of Statistics},
-  volume =	 {19},
-  number =	 {4},
+  volume =	 19,
+  number =	 4,
   pages =	 {2244--2253},
-  year =	 {1991}
+  year =	 1991
 }
 
 @Article{Izenman91,
@@ -15684,11 +15684,9 @@ pages =	 {186-200}
   pages =	 {639--643}
 }
 
-
-
 @Article{Rubin90,
-  author =	 {DB Rubin},
-  title =	 {On the Applicaiton of Probability Theory to
+  author =	 {Donald B. Rubin},
+  title =	 {On the Application of Probability Theory to
                   Agricultural Experiments. Essay on
                   Principles. Section 9. Comment: Neyman (1923) and
                   Causal Inference in Experiments and Observational
@@ -15779,7 +15777,7 @@ pages =	 {186-200}
   title =	 {{Minimum Distance Matched Sampling With Fine Balance
                   in an Observational Study of Treatment for Ovarian
                   Cancer}},
-  author =	 {Rosenbaum, P.R. and Ross, R.N. and Silber, J.H.},
+  author =	 {Rosenbaum, Paul R. and Ross, R.N. and Silber, J.H.},
   journal =	 {Journal of the American Statistical Association},
   volume =	 {102},
   number =	 {477},
@@ -18792,7 +18790,7 @@ address = {Chicago, IL}
 
 @article{ImbWoo09,
   title =	 {Recent Developments in the Econometrics of Program Evaluation},
-  author =	 {Imbens, G.W. and Wooldridge, J.M.},
+  author =	 {Imbens, Guido W. and Wooldridge, J.M.},
   journal =	 {Journal of Economic Literature},
   pages = {5--86},
   volume = {47},
