--- a/gkpubs.bib
+++ b/gkpubs.bib
@@ -1206,7 +1206,7 @@ pages={1037--1060},
   pages =	 {49--69},
   month =	 {3},
   number =	 1 ,
-  note =	 {{http://gking.harvard.edu/files/abs/evil-abs.shtml}}
+  note =	 {http://j.mp/lsZDuW}
 }
 
 @article{KinZen01,
