--- a/gk.bib
+++ b/gk.bib
@@ -5987,13 +5987,17 @@ howpublished = {NBER}
 	month={May},
 	number={2}
 }
-
-@techreport{Imai07,
-	author={Imai, Kosuke},
-	title={Randomization-based Inference and Efficiency Analysis in Experiments under
-		the Matched-Pair Design},
-	institution={Department of Politics, Princeton University},
-	year={2007}
+@article{Imai08,
+  title =        {Variance identification and efficiency analysis in
+                  randomized experiments under the matched-pair
+                  design},
+  author =       {Imai, Kosuke},
+  journal =      {Statistics in medicine},
+  volume =       {27},
+  number =       {24},
+  pages =        {4857},
+  year =         {2008},
+  publisher =    {Citeseer}
 }
 
 @article{Imbens00,
@@ -24750,4 +24754,12 @@ note= {University of California, Berkeley (USA) and Max Planck Institute for Dem
   pages =        {11823--11828},
   year =         {2016},
   publisher =    {National Acad Sciences}
+}
+@article{Rosenbaum88,
+  title =        {Permutation tests for matched pairs with adjustments
+                  for covariates},
+  author =       {Rosenbaum, Paul R},
+  journal =      {Applied Statistics},
+  pages =        {401--411},
+  year =         {1988}
 }
