--- a/gkpubs.bib
+++ b/gkpubs.bib
@@ -425,7 +425,7 @@ pages={1037--1060},
 }
 
 @article{ImaKinStu08,
-  author =	 {Kosuke Imai and Gary King and Elizabeth Stuart},
+  author =	 {Kosuke Imai and Gary King and Elizabeth A. Stuart},
   title =	 {Misunderstandings Among Experimentalists and
                   Observationalists about Causal Inference},
   journal =	 {Journal of the Royal Statistical Society, {S}eries
@@ -438,7 +438,7 @@ pages={1037--1060},
 }
 
 @article{uImaKinStu08,
-  author =	 {Kosuke Imai and Gary King and Elizabeth Stuart},
+  author =	 {Kosuke Imai and Gary King and Elizabeth A. Stuart},
   title =	 {Misunderstandings Among Experimentalists and
                   Observationalists about Causal Inference},
   journal =	 {Journal of the Royal Statistical Society, {S}eries
@@ -487,7 +487,7 @@ pages={1037--1060},
 
 @article{uHoImaKin07,
   author =	 {Daniel Ho and Kosuke Imai and Gary King and
-                  Elizabeth Stuart},
+                  Elizabeth A. Stuart},
   title =	 {Matching as Nonparametric Preprocessing for Reducing
                   Model Dependence in Parametric Causal Inference},
   journal =	 {Political Analysis},
@@ -498,7 +498,7 @@ pages={1037--1060},
 
 @article{HoImaKin07,
   author =	 {Daniel Ho and Kosuke Imai and Gary King and
-                  Elizabeth Stuart},
+                  Elizabeth A. Stuart},
   title =	 {Matching as Nonparametric Preprocessing for Reducing
                   Model Dependence in Parametric Causal Inference},
   journal =	 {Political Analysis},
