--- a/gk.bib
+++ b/gk.bib
@@ -118,7 +118,7 @@
 }
 
 @misc{AbaImb05,
-  author =       {Alberto Abadie and Guido Imbens},
+  author =       {Alberto Abadie and Guido W. Imbens},
   title =        {Estimation of the Conditional Variance in Paired
                   Experiments},
   year =         2006,
@@ -140,7 +140,7 @@ number = {3}
 }        
 
 @misc{AbaImb11b,
-author =	 {Alberto Abadie and Guido Imbens},
+author =	 {Alberto Abadie and Guido W. Imbens},
 title =	 {Matching on the estimated Propensity Score},
 year =	 2011,
 howpublished = {NBER}
@@ -170,7 +170,7 @@ howpublished = {NBER}
 }
 
 @article{AbaImb07b,
-  author =	 {Alberto Abadie and Guido Imbens},
+  author =	 {Alberto Abadie and Guido W. Imbens},
   title =	 {On the Failure of the Bootstrap for Matching Estimators},
   year =	 {2007},
   journal = {Econometrica},
@@ -1169,7 +1169,7 @@ howpublished = {NBER}
 
 
 @book{ImbRub15,
-  author =       {Guido Imbens and Donald Rubin},
+  author =       {Guido W. Imbens and Donald Rubin},
   title =        {Causal Inference for Statistics, Social, and
                   Biomedical Sciences An Introduction},
   year =         {2015},
@@ -18786,7 +18786,7 @@ address = {Chicago, IL}
 @article{Imbens09,
   title =	 {{Better LATE Than Nothing: Some Comments on Deaton
                   (2009) and Heckman and Urzua (2009)}},
-  author =	 {Imbens, G.W.},
+  author =	 {Imbens, Guido W.},
   journal =	 {NBER Working Paper},
   year =	 {2009}
 }
@@ -18931,7 +18931,7 @@ address = {Chicago, IL}
 
 @article{ImbAng94,
   title={{Identification and estimation of local average treatment effects}},
-  author={Imbens, G.W. and Angrist, J.D.},
+  author={Imbens, Guido W. and Angrist, J.D.},
   journal={Econometrica},
   volume={62},
   number={2},
@@ -19958,7 +19958,7 @@ journal = {Science}
 }
 
 @Article{AbaImb02,
-  author =	 {Alberto Abadie and Guido Imbens},
+  author =	 {Alberto Abadie and Guido W. Imbens},
   title =	 {Simple and Bias-Corrected Matching Estimators for
                   Average Treatment Effects},
   journal =	 {NBER Technical Working Paper},
@@ -23182,7 +23182,7 @@ author = {{National Center for Education Statistics}},
 }
 
 @Article{AthImb15,
-  author =       {Susan Athey and Guido Imbens},
+  author =       {Susan Athey and Guido W. Imbens},
   title =        {A Measure of Robustness to Misspecification},
   journal =      {American Economic Review Papers and Proceedings},
   year =         {2015},
@@ -23821,7 +23821,7 @@ note= {University of California, Berkeley (USA) and Max Planck Institute for Dem
 
 @article{LanImb96,
   title =        {Case-control studies with contaminated controls},
-  author =       {Lancaster, Tony and Imbens, Guido},
+  author =       {Lancaster, Tony and Imbens, Guido W.},
   journal =      {Journal of Econometrics},
   volume =       {71},
   number =       {1},
