--- a/gk.bib
+++ b/gk.bib
@@ -4805,7 +4805,7 @@ howpublished = {NBER}
 }
 
 @article{GreLuSil04,
-	author={Robert Greevy and Bo Lu and Jeffrey H. Silver and Paul Rosenbaum},
+	author={Robert Greevy and Bo Lu and Jeffrey H. Silver and Paul R. Rosenbaum},
 	title={Optimal multivariate matching before randomization},
 	journal={Biostatistics},
 	volume={5},
@@ -10038,7 +10038,7 @@ pages={706-719}
 }
 
 @article{Rosenbaum84,
-	author={Paul Rosenbaum},
+	author={Paul R. Rosenbaum},
 	title={The Consequences of Adjusting for a Concomitant Variable That Has Been Affected
 		by the Treatment},
 	journal= jrssA,
