--- a/gk.bib
+++ b/gk.bib
@@ -15894,7 +15894,7 @@ pages =	 {186-200}
 @article{AbaImb11,
   title =        {Bias-corrected matching estimators for average
                   treatment effects},
-  author =       {Abadie, Alberto and Imbens, Guido W},
+  author =       {Abadie, Alberto and Imbens, Guido W.},
   journal =      {Journal of Business \& Economic Statistics},
   volume =       {29},
   number =       {1},
