--- a/gk.bib
+++ b/gk.bib
@@ -148,7 +148,7 @@ howpublished = {NBER}
 
 @article{AbaImb12,
   title =        {A Martingale Representation for Matching Estimators},
-  author =       {Abadie, Alberto and Imbens, Guido W},
+  author =       {Abadie, Alberto and Imbens, Guido W.},
   journal =      {Journal of the American Statistical Association},
   volume =       {107},
   number =       {498},
