--- a/gk.bib
+++ b/gk.bib
@@ -1169,7 +1169,7 @@ howpublished = {NBER}
 
 
 @book{ImbRub15,
-  author =       {Guido W. Imbens and Donald Rubin},
+  author =       {Guido W. Imbens and Donald B. Rubin},
   title =        {Causal Inference for Statistics, Social, and
                   Biomedical Sciences An Introduction},
   year =         {2015},
@@ -2944,7 +2944,7 @@ howpublished = {NBER}
 }
 
 @article{DemLaiRub77,
-	author={Arthur P. Dempster and N.M. Laird and D.B. Rubin},
+	author={Arthur P. Dempster and N.M. Laird and Donald B. Rubin},
 	title={Maximum Likelihood Estimation from Incomplete Data via the EM Algorithm},
 	journal={Journal of the Royal Statistical Association},
 	volume={39},
@@ -6048,13 +6048,6 @@ howpublished = {NBER}
 	pages={305-327},
 	month={February},
 	number={1}
-}
-
-@unpublished{ImbRubND,
-	author={Guido W. Imbens and Donald B. Rubin},
-	title={Causal Inference},
-	note={Book Manuscript},
-	year= 2009
 }
 
 @book{IngMcC96,
@@ -15638,7 +15631,7 @@ pages =	 {186-200}
 }
 
 @Article{LitRub00,
-  author =	 {RJ Little and DB Rubin},
+  author =	 {Rodrick J Little and Donald B. Rubin},
   title =	 {Causal Effects in Clinical and Epidemiological
                   Studies Via Potential Outcomes: Concepts and
                   Analytical Approaches},
@@ -22108,7 +22101,7 @@ author = {{National Center for Education Statistics}},
 @inproceedings{SchEzzJoh96,
   title =        {The NHANES III Multiple Imputation Project},
   author =       {Schafer, Joseph L. and Ezzati-Rice, Trena M and Johnson, W and
-                  Khare, Meena and Little, Roderick JA and Rubin, Donald B},
+                  Khare, Meena and Little, Roderick JA and Rubin, Donald B.},
   booktitle =    {Proceedings of the Survey Research
                   Methods Section},
   volume =       60,
