--- a/gk.bib
+++ b/gk.bib
@@ -10117,7 +10117,7 @@ pages={706-719}
 }
 
 @article{RosRub83,
-	author={Paul R. Rosenbaum and Donald B.\ Rubin},
+	author={Paul R. Rosenbaum and Donald B. Rubin},
 	title={The Central Role of the Propensity Score in Observational Studies for Causal
 		Effects},
 	journal={Biometrika},
@@ -10159,7 +10159,7 @@ pages={706-719}
 }
 
 @article{RosRub85b,
-	author={Rosenbaum, P.R. and Rubin, D.B.},
+	author={Rosenbaum, Paul R. and Rubin, Donald B.},
 	title={The Bias Due to Incomplete Matching},
 	journal={Biometrics},
 	volume={41},
@@ -15450,7 +15450,7 @@ pages={706-719}
 }
 
 @book{RosRub02,
-  author =	 {P.R. Rosenbaum and Donald B. Rubin},
+  author =	 {Paul R. Rosenbaum and Donald B. Rubin},
   title =	 {Observational Studies},
   Publisher =	 {Springer},
   year =	 {2002},
@@ -24751,7 +24751,7 @@ note= {University of California, Berkeley (USA) and Max Planck Institute for Dem
 @article{Rosenbaum88,
   title =        {Permutation tests for matched pairs with adjustments
                   for covariates},
-  author =       {Rosenbaum, Paul R},
+  author =       {Rosenbaum, Paul R.},
   journal =      {Applied Statistics},
   pages =        {401--411},
   year =         {1988}
