--- a/gk.bib
+++ b/gk.bib
@@ -23061,7 +23061,7 @@ author = {{National Center for Education Statistics}},
 }
 @article{VanShp11,
   title =        {A new criterion for confounder selection},
-  author =       {VanderWeele, Tyler J and Shpitser, Ilya},
+  author =       {VanderWeele, Tyler J. and Shpitser, Ilya},
   journal =      {Biometrics},
   volume =       {67},
   number =       {4},
