--- a/gkpubs.bib
+++ b/gkpubs.bib
@@ -232,6 +232,15 @@
   OPTannote =    {}
 }
 
+@article{KinRob15,
+  title =        {How Robust Standard Errors Expose Methodological
+                  Problems They Do Not Fix, and What to Do About It},
+  author =       {King, Gary and Roberts, Margaret E.},
+  journal =      {Political Analysis},
+  volume =       {23},
+  pages =        {159--179},
+  year =         {2015}
+}
 @Article{KinSen12,
   author =       {Gary King and Maya Sen},
   title =        {How Social Science Research can Improve Teaching},
@@ -1987,7 +1996,7 @@ pages={1037--1060},
 
 
 @Article{KinRob14,
-  author =       {Gary King and Margaret Roberts},
+  author =       {Gary King and Margaret E. Roberts},
   title =        {Replication Data for: How Robust Standard Errors
                   Expose Methodological Problems They Do Not Fix, and
                   What to Do About It},
