--- a/gk.bib
+++ b/gk.bib
@@ -24756,3 +24756,9 @@ note= {University of California, Berkeley (USA) and Max Planck Institute for Dem
   pages =        {401--411},
   year =         {1988}
 }
+@article{Ding16,
+  title={A paradox from randomization-based causal inference},
+  author={Ding, Peng},
+  journal={arXiv preprint arXiv:1402.0142},
+  year={2016}
+}
