--- a/gk.bib
+++ b/gk.bib
@@ -24370,7 +24370,7 @@ note= {University of California, Berkeley (USA) and Max Planck Institute for Dem
   year =         {2001}
 }
 @book{TarNikBas14,
-  title={Sequential analysis: Hypothesis testing and changepoint detection},
+  title={Sequential Analysis: Hypothesis Testing and Changepoint Detection},
   author={Tartakovsky, Alexander and Nikiforov, Igor and Basseville, Mich{\`e}le},
   year={2014},
   publisher={CRC Press}
