--- a/gkpubs.bib
+++ b/gkpubs.bib
@@ -29,12 +29,12 @@
 }
 
 @book{GirKin08,
-  author =	 {Federico Girosi and Gary King},
-  title =	 {Demographic Forecasting},
-  publisher =	 {Princeton University Press},
-  year =	 {2008},
-  address =	 {Princeton},
-  url =	 {http://gking.harvard.edu/files/smooth/}
+  author =       {Federico Girosi and Gary King},
+  title =        {Demographic Forecasting},
+  publisher =    {Princeton University Press},
+  year =         {2008},
+  address =      {Princeton},
+  url =          {j.mp/dsmooth}
 }
 
 @book{KinRosTan04,
@@ -58,7 +58,7 @@
 }
 
 @book{King98,
-  title =        {Unifying political methodology: The Likelihood
+  title =        {Unifying Political Methodology: The Likelihood
                   Theory of Statistical Inference},
   author =       {King, Gary},
   year =         {1998},
@@ -527,7 +527,7 @@ pages={1037--1060},
   number =	 {1},
   month =	 {1},
   pages =	 {229--247},
-  note =	 {\url{http://j.mp/jNFDgI}}
+  note =	 {j.mp/jNFDgI}
 }
 
 @article{ImaKinLau07,
@@ -1290,7 +1290,7 @@ pages={1037--1060},
   pages =	 {341--355},
   month =	 {April},
   number =	 2,
-  note =	 {{http://gking.harvard.edu/files/abs/making-abs.shtml}}
+  note =	 {{bit.ly/makemost}}
 }
 
 @article{GelKinLiu99,
