--- a/gkpubs.bib
+++ b/gkpubs.bib
@@ -1288,7 +1288,7 @@ pages={1037--1060},
   volume =	 44,
   year =	 2000,
   pages =	 {341--355},
-  month =	 {April},
+  month =	 4,
   number =	 2,
   note =	 {{bit.ly/makemost}}
 }
