--- a/gkpubs.bib
+++ b/gkpubs.bib
@@ -518,28 +518,28 @@ pages={1037--1060},
 }
 
 @article{HopKin10b,
-  author =	 {Daniel Hopkins and Gary King},
-  title =	 {A Method of Automated Nonparametric Content Analysis
+  author =       {Daniel Hopkins and Gary King},
+  title =        {A Method of Automated Nonparametric Content Analysis
                   for Social Science},
-  journal =	 {American Journal of Political Science},
-  year =	 {2010},
-  volume =	 {54},
-  number =	 {1},
-  month =	 {1},
-  pages =	 {229--247},
-  note =	 {j.mp/jNFDgI}
+  journal =      {American Journal of Political Science},
+  year =         {2010},
+  volume =       {54},
+  number =       {1},
+  month =        {1},
+  pages =        {229--247},
+  url =          {j.mp/jNFDgI}
 }
 
-@article{ImaKinLau07,
-  author =	 {Kosuke Imai and Gary King and Olivia Lau},
-  title =	 {Toward A Common Framework for Statistical Analysis
+@article{ImaKinLau08,
+  author =       {Kosuke Imai and Gary King and Olivia Lau},
+  title =        {Toward A Common Framework for Statistical Analysis
                   and Development},
-  journal =	 {Journal of Computational Graphics and Statistics},
-  volume =	 17,
-  number =	 4,
-  pages =	 {1--22},
-  year =	 2008,
-  note =	 {{http://gking.harvard.edu/files/abs/z-abs.shtml}}
+  journal =      {Journal of Computational Graphics and Statistics},
+  volume =       17,
+  number =       4,
+  pages =        {1--22},
+  year =         2008,
+  url =          {j.mp/commonf}
 }
 
 @article{ImaKinNal09d,
@@ -565,7 +565,7 @@ pages={1037--1060},
   number =       {1},
   pages =        {29--53},
   year =         {2009},
-  note =         {{http://j.mp/kM8HoX}}
+  url =          {j.mp/essrole}
 }
 
 
@@ -1281,16 +1281,16 @@ pages={1037--1060},
 }
 
 @article{KinTomWit00,
-  author =	 {Gary King and Michael Tomz and Jason Wittenberg},
-  title =	 {Making the Most of Statistical Analyses: Improving
+  author =       {Gary King and Michael Tomz and Jason Wittenberg},
+  title =        {Making the Most of Statistical Analyses: Improving
                   Interpretation and Presentation},
-  journal =	 {American Journal of Political Science},
-  volume =	 44,
-  year =	 2000,
-  pages =	 {341--355},
-  month =	 4,
-  number =	 2,
-  note =	 {{bit.ly/makemost}}
+  journal =      {American Journal of Political Science},
+  volume =       44,
+  year =         2000,
+  pages =        {341--355},
+  month =        4,
+  number =       2,
+  url =          {bit.ly/makemost}
 }
 
 @article{GelKinLiu99,
