--- a/gk.bib
+++ b/gk.bib
@@ -24370,17 +24370,20 @@ note= {University of California, Berkeley (USA) and Max Planck Institute for Dem
   year =         {2001}
 }
 @book{TarNikBas14,
-  title={Sequential Analysis: Hypothesis Testing and Changepoint Detection},
-  author={Tartakovsky, Alexander and Nikiforov, Igor and Basseville, Mich{\`e}le},
-  year={2014},
-  publisher={CRC Press}
+  title =        {Sequential Analysis: Hypothesis Testing and
+                  Changepoint Detection},
+  author =       {Tartakovsky, Alexander and Nikiforov, Igor and
+                  Basseville, Mich{\`e}le},
+  year =         {2014},
+  publisher =    {CRC Press}
 }
 @book{MalMukSen11,
-  title={Sequential estimation},
-  author={Ghosh, Malay and Mukhopadhyay, Nitis and Sen, Pranab Kumar},
-  volume={904},
-  year={2011},
-  publisher={John Wiley \& Sons}
+  title =        {Sequential estimation},
+  author =       {Ghosh, Malay and Mukhopadhyay, Nitis and Sen, Pranab
+                  Kumar},
+  volume =       {904},
+  year =         {2011},
+  publisher =    {John Wiley \& Sons}
 }
 @article{AchBlaSen16,
   title =        {Explaining Causal Findings Without Bias: Detecting
@@ -24394,14 +24397,14 @@ note= {University of California, Berkeley (USA) and Max Planck Institute for Dem
 }
 
 @article{Lindsey97,
-  title={Stopping rules and the likelihood function},
-  author={Lindsey, JK},
-  journal={Journal of statistical planning and inference},
-  volume={59},
-  number={1},
-  pages={167--177},
-  year={1997},
-  publisher={Elsevier}
+  title =        {Stopping rules and the likelihood function},
+  author =       {Lindsey, JK},
+  journal =      {Journal of statistical planning and inference},
+  volume =       {59},
+  number =       {1},
+  pages =        {167--177},
+  year =         {1997},
+  publisher =    {Elsevier}
 }
 
 @article{Coss09,
