--- a/gkpubs.bib
+++ b/gkpubs.bib
@@ -1972,6 +1972,18 @@ pages={1037--1060},
 % Data
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
+@data{KinPanRob17,
+  author =       {King, Gary and Pan, Jennifer and Roberts, Margaret
+                  E.},
+  publisher =    {Harvard Dataverse},
+  title =        {Replication data for: How the Chinese Government
+                  Fabricates Social Media Posts for Strategic
+                  Distraction, not Engaged Argument},
+  year =         {2017},
+  doi =          {10.7910/DVN/QSZMPD},
+  url =          {http://dx.doi.org/10.7910/DVN/QSZMPD}
+}
+
 @Article{BlaHonKin15c,
   author =       {Matthew Blackwell and James Honaker and Gary King},
   title =        {Replication Data for: A Unified Approach To
