--- a/gk.bib
+++ b/gk.bib
@@ -23987,7 +23987,7 @@ note= {University of California, Berkeley (USA) and Max Planck Institute for Dem
   author =       {{Pew Research Center}},
   title =        {Beyond Red vs. Blue: The Political Typology},
   howpublished = {\url{j.mp/PewResponse}},
-  month =        {June},
+  month =        {6},
   year =         2014
 }
 @article{NahKru12,
@@ -24046,7 +24046,7 @@ note= {University of California, Berkeley (USA) and Max Planck Institute for Dem
   journal =      {China Mobile Social Share Annual Report (\cntext{内
                   部版})},
   year =         2014,
-  month =        {March},
+  month =        {3},
   note =         {{http://j.mp/iimedia}}
 }
 
