--- a/gk.bib
+++ b/gk.bib
@@ -24047,7 +24047,7 @@ note= {University of California, Berkeley (USA) and Max Planck Institute for Dem
                   部版})},
   year =         2014,
   month =        {3},
-  note =         {{http://j.mp/iimedia}}
+  url =         {j.mp/iimedia}
 }
 
 @article{ChePanXu14,
