--- a/gkpubs.bib
+++ b/gkpubs.bib
@@ -235,7 +235,7 @@
 @article{KinRob15,
   title =        {How Robust Standard Errors Expose Methodological
                   Problems They Do Not Fix, and What to Do About It},
-  author =       {King, Gary and Roberts, Margaret E.},
+  author =       {King, Gary and Margart E. Roberts},
   journal =      {Political Analysis},
   volume =       {23},
   pages =        {159--179},
@@ -1973,8 +1973,7 @@ pages={1037--1060},
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 @data{KinPanRob17,
-  author =       {King, Gary and Pan, Jennifer and Roberts, Margaret
-                  E.},
+  author =       {King, Gary and Jennifer Pan and Margaret E. Roberts},
   publisher =    {Harvard Dataverse},
   title =        {Replication data for: How the Chinese Government
                   Fabricates Social Media Posts for Strategic
