--- a/gkpubs.bib
+++ b/gkpubs.bib
@@ -121,12 +121,12 @@
   OPTannote =    {}
 }
 
-@Article{IacKinPor15,
+@Article{IacKinPor17,
   author =       {Stefano M. Iacus and Gary King and Giuseppe Porro},
   title =        {A Theory of Statistical Inference for Matching
-                  Methods in Applied Causal Research},
+                  Methods in Causal Research},
   journal =      { },
-  year =         {2015},
+  year =         {2017},
   OPTkey =       {},
   OPTvolume =    {},
   OPTnumber =    {},
