--- a/gk.bib
+++ b/gk.bib
@@ -23785,14 +23785,15 @@ note= {University of California, Berkeley (USA) and Max Planck Institute for Dem
   publisher =    {Citeseer}
 }
 
-@article{roberts2015experiencing,
+@article{Roberts15,
   title =        {Experiencing Censorship Emboldens Internet Users and
                   Decreases Government Support in China},
-  author =       {Roberts, M},
-  journal =      {Unpublished Working Paper,
-                  \url{margaretroberts.net/wp-content/uploads/2015/07/fear.pdf}},
+  author =       {Margaret E. Roberts},
+  journal =      {Unpublished Working Paper},
+  url =          {margaretroberts.net/wp-content/uploads/2015/07/fear.pdf},
   year =         {2015}
 }
+
 @Article{BarLiaXu15,
   author =       {Baranovsky, Alla and Liaqat, Asad and Xu, Alice},
   title =        {Conditional Cash Transfers and Electoral Behavior: A
