--- a/gkpubs.bib
+++ b/gkpubs.bib
@@ -1974,7 +1974,7 @@ pages={1037--1060},
 
 @data{KinPanRob17,
   author =       {King, Gary and Jennifer Pan and Margaret E. Roberts},
-  publisher =    {Harvard Dataverse},
+  note =    {Harvard Dataverse},
   title =        {Replication data for: How the Chinese Government
                   Fabricates Social Media Posts for Strategic
                   Distraction, not Engaged Argument},
