--- a/gkpubs.bib
+++ b/gkpubs.bib
@@ -1974,11 +1974,12 @@ pages={1037--1060},
 
 @data{KinPanRob17,
   author =       {King, Gary and Jennifer Pan and Margaret E. Roberts},
-  note =    {Harvard Dataverse},
   title =        {Replication data for: How the Chinese Government
                   Fabricates Social Media Posts for Strategic
                   Distraction, not Engaged Argument},
   year =         {2017},
+  note =         {Harvard Dataverse, V1,
+                  UNF:6:/3IIELdmrcyZm+v5mx0OJg==},
   doi =          {10.7910/DVN/QSZMPD},
   url =          {http://dx.doi.org/10.7910/DVN/QSZMPD}
 }
