--- a/gkpubs.bib
+++ b/gkpubs.bib
@@ -2463,7 +2463,7 @@ pages={1037--1060},
                   Causal Inference},
   year =	 {Forthcoming},
   journal =	 {Journal of Statistical Software},
-  note =	 {{http://gking.harvard.edu/matchit}}
+  url =	 {gking.harvard.edu/matchit}
 }
 
 @InCollection{Gelman04,
@@ -2479,16 +2479,16 @@ pages={1037--1060},
 }
 
 @article {KinPanRob13,
-  title =	 {How Censorship in China Allows Government Criticism
+  title =        {How Censorship in China Allows Government Criticism
                   but Silences Collective Expression},
-  journal =	 {American Political Science Review},
-  volume =	 {107},
-  year =	 {2013},
-  pages =	 {1-18},
-  author =	 {Gary King and Jennifer Pan and Margaret E. Roberts},
-  note ={{ http://j.mp/LdVXqN}}
+  journal =      {American Political Science Review},
+  volume =       {107},
+  year =         {2013},
+  pages =        {1-18},
+  author =       {Gary King and Jennifer Pan and Margaret E. Roberts},
+  url =          {j.mp/LdVXqN}
 }
-@article {KinPanRob14,
+@article{KinPanRob14,
   title =        {Reverse-engineering censorship in China: Randomized
                   experimentation and participant observation},
   journal =      {Science},
@@ -2496,7 +2496,7 @@ pages={1037--1060},
   number =       {6199},
   year =         {2014},
   pages =        {1-10},
-  note =         {http://j.mp/1KbwkJJ},
+  url =          {j.mp/1KbwkJJ},
   author =       {Gary King and Jennifer Pan and Margaret E. Roberts}
 }
 
@@ -2505,8 +2505,8 @@ pages={1037--1060},
   title =        {Replication Data for: Computer-Assisted Keyword and
                   Document Set Discovery from Unstructured Text},
   year =         2016,
-  note =         {\url{doi:10.7910/DVN/FMJDCD} Harvard Dataverse,
-                  [UNF:6:56ELwemliNH+ALideeeh3Q==]}
+  url =          {doi:10.7910/DVN/FMJDCD},
+  note =         {Harvard Dataverse, [UNF:6:56ELwemliNH+ALideeeh3Q==]}
 }
 @Online{HopKinKno13,
   author =       {Daniel Hopkins and Gary King and Matthew Knowles and
