--- a/gkpubs.bib
+++ b/gkpubs.bib
@@ -1979,9 +1979,9 @@ pages={1037--1060},
                   Distraction, not Engaged Argument},
   year =         {2017},
   note =         {Harvard Dataverse, V1,
-                  UNF:6:/3IIELdmrcyZm+v5mx0OJg==},
+                  [UNF:6:/3IIELdmrcyZm+v5mx0OJg==]},
   doi =          {10.7910/DVN/QSZMPD},
-  url =          {http://dx.doi.org/10.7910/DVN/QSZMPD}
+  url =          {dx.doi.org/10.7910/DVN/QSZMPD}
 }
 
 @Article{BlaHonKin15c,
