--- a/gkpubs.bib
+++ b/gkpubs.bib
@@ -1978,7 +1978,7 @@ pages={1037--1060},
                   Fabricates Social Media Posts for Strategic
                   Distraction, not Engaged Argument},
   year =         {2017},
-  note =         {Harvard Dataverse, V1, [UNF:6:/3IIELdmrcyZm+v5mx0OJg==]},
+  note =         {{Harvard Dataverse, V1, [UNF:6:/3IIELdmrcyZm+v5mx0OJg==]}},
   doi =          {10.7910/DVN/QSZMPD},
   url =          {dx.doi.org/10.7910/DVN/QSZMPD}
 }
