--- a/gkpubs.bib
+++ b/gkpubs.bib
@@ -622,16 +622,16 @@ pages={1037--1060},
 }
 
 @article{KinWan07,
-  author =	 {Gary King and Jonathan Wand},
-  title =	 {Comparing Incomparable Survey Responses: New Tools
+  author =       {Gary King and Jonathan Wand},
+  title =        {Comparing Incomparable Survey Responses: New Tools
                   for Anchoring Vignettes},
-  journal =	 {Political Analysis},
-  volume =	 {15},
-  year =	 {2007},
-  pages =	 {46-66},
-  month =	 {Winter},
-  number =	 {1},
-  note =	 {{http://gking.harvard.edu/files/abs/c-abs.shtml}}
+  journal =      {Political Analysis},
+  volume =       {15},
+  year =         {2007},
+  pages =        {46-66},
+  month =        {Winter},
+  number =       1,
+  url =          {j.mp/pitfallsH}
 }
 
 @article{KinZen07,
@@ -641,7 +641,7 @@ pages={1037--1060},
   journal =	 {International Studies Quarterly},
   year =	 {2007},
   pages =	 {183-210},
-  month =	 {March},
+  month =	 3,
   note =         {{http://gking.harvard.edu/files/abs/counterf-abs.shtml}}
 }
 
