--- a/gk.bib
+++ b/gk.bib
@@ -1810,7 +1810,7 @@ howpublished = {NBER}
 	volume={163},
 	year={2006},
 	pages={1149-1156},
-	month={April}
+	month=4
 }
 
 @book{Brown58,
@@ -2932,7 +2932,7 @@ howpublished = {NBER}
 	volume={94},
 	year={1999},
 	pages={1053-62},
-	month={December},
+	month=12,
 	number={448}
 }
 
@@ -4378,7 +4378,7 @@ howpublished = {NBER}
 	volume= 589,
 	year= 2003,
 	pages={63-93},
-	month={September}
+	month=9s
 }
 
 @article{GlaMayDec06,
@@ -8842,14 +8842,17 @@ pages={706-719}
 }
 
 @article{NieFinDav11,
-	author={Richard A. Nielsen and Michael G. Findley and Zachary S. Davis and Tara Candland and Daniel L. Nielson},
-	title={Foreign Aid Shocks as a Cause of Violent Armed Conflict},
-	journal={American Journal of Political Science},
-	volume={55},
-	year={2011},
-	pages={219-232},
-	month={April},
-	number={2}
+  author =       {Richard A. Nielsen and Michael G. Findley and
+                  Zachary S. Davis and Tara Candland and Daniel L.
+                  Nielson},
+  title =        {Foreign Aid Shocks as a Cause of Violent Armed
+                  Conflict},
+  journal =      {American Journal of Political Science},
+  volume =       {55},
+  year =         {2011},
+  pages =        {219-232},
+  month =        4,
+  number =       {2}
 }
 
 @misc{NISO01,
@@ -11328,7 +11331,7 @@ pages={706-719}
 	volume= 125,
 	year= 2005,
 	pages={305-353},
-	month={March-April},
+	month=3-4,
 	number={1-2}
 }
 
@@ -19264,7 +19267,7 @@ address = {Chicago, IL}
   volume =	 51,
   number =	 1,
   pages =	 {171-184},
-  month =	 {February}
+  month =	 2
 }
 
 @Article{Stuart10,
@@ -19928,7 +19931,7 @@ journal = {Science}
   volume =	 98,
   number =	 3,
   pages =	 {309--319},
-  month =	 {March}
+  month =	 3
 }
 
 @Article{Sobel06b,
