--- a/gkpubs.bib
+++ b/gkpubs.bib
@@ -631,7 +631,7 @@ pages={1037--1060},
   pages =        {46-66},
   month =        {Winter},
   number =       1,
-  url =          {j.mp/pitfallsH}
+  url =          {j.mp/CompInC}
 }
 
 @article{KinZen07,
@@ -642,7 +642,7 @@ pages={1037--1060},
   year =	 {2007},
   pages =	 {183-210},
   month =	 3,
-  note =         {{http://gking.harvard.edu/files/abs/counterf-abs.shtml}}
+  url =          {j.mp/pitfallsH}
 }
 
 @article{KinZen07b,
