--- a/gk.bib
+++ b/gk.bib
@@ -23193,12 +23193,12 @@ author = {{National Center for Education Statistics}},
 
 @article{Hill08,
   title =        {Discussion of research using propensity-score
-                  matching: Comments on ‘A critical appraisal of
+                  matching: Comments on `A critical appraisal of
                   propensity-score matching in the medical literature
-                  between 1996 and 2003’by Peter Austin, Statistics in
+                  between 1996 and 2003' by Peter Austin, Statistics in
                   Medicine},
   author =       {Hill, Jennifer},
-  journal =      {Statistics in medicine},
+  journal =      {Statistics in Medicine},
   volume =       {27},
   number =       {12},
   pages =        {2055--2061},
