--- a/gk.bib
+++ b/gk.bib
@@ -23193,7 +23193,7 @@ author = {{National Center for Education Statistics}},
 
 @article{Hill08,
   title =        {Discussion of research using propensity-score
-                  matching: Comments on `A critical appraisal of
+                  matching: Comments on 'A critical appraisal of
                   propensity-score matching in the medical literature
                   between 1996 and 2003' by Peter Austin, Statistics in
                   Medicine},
